# rl-foundations-llm

./: AGENTS.md  MEASUREMENT_RULES.md  README.md  pyproject.toml
course/: __init__.py  bandit_train.py  eval.py  inspect_run.py  io_utils.py  kl_tradeoff_demo.py  score.py  selection_demo.py  token_inspect.py  types.py  validate_scorer.py
course/assignments/: hackable_scorer_demo.py  hackable_scorer_demo_sol.py  hackable_scorer_demo_template.py  kata_01.py  kata_01_sol.py  kata_01_template.py  kl_regularized_choice.py  kl_regularized_choice_sol.py  kl_regularized_choice_template.py  selection_policy.py  selection_policy_sol.py  selection_policy_template.py  two_step_mdp_demo.py  two_step_mdp_demo_sol.py  two_step_mdp_demo_template.py
course/core/: __init__.py  datasets.py  eval.py  gate.py  io.py  scoring.py  selection.py
course_repo/: MEASUREMENT_RULES.md  README.md  pyproject.toml
docs/: Blueprint - concepts.md  solution_walkthrough.md
learn/: Introduction - formal.md  Introduction - technical.md  Introduction.md  Project.md
notes/: credit_assignment.md  kl_tradeoff.md  mental_map_v1.md  promotion_memo.md  red_team_report.md  reinforce_forensics.md  reward_spec_blackbox.md  student_results.md
plans/: Blueprint - concepts.md  Learning pill.md
runs/: l3_build_kl_choice.txt  l3_sabotage_no_kl.txt
scripts/: rsync_course_repo.sh
tests/: conftest.py  test_kata_01.py  test_kata_01_sol.py  test_reward_regressions.py  test_reward_regressions_sol.py  test_score.py  test_scripts_smoke.py  test_selection_policy.py  test_selection_policy_sol.py
(+121 files in other folders)
