[project]
name = "rl-foundations-for-llms-harness"
version = "0.1.0"
description = "Minimal, local, verifiable-reward harness for an RL foundations course."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
